feat: add unit test cases [WIP]